# Auwgentmode

./: .gitignore  Cargo.toml  README.md  scratch.rs
benches/: README.md  startup.rs
model_tests/: Cargo.toml  README.md
model_tests/src/: agent.rs  client.rs  main.rs  reporter.rs
model_tests/src/scenarios/: basic.rs  chained.rs  data.rs  mod.rs  orphan.rs  parallel.rs
src/: engine.rs  js_engine.rs  lib.rs  luau_engine.rs  tests.rs  types.rs
tests/: data_manipulation.rs  js_sandbox.rs
