[package]
name    = "model_tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "model_tests"
path = "src/main.rs"

[dependencies]
# Engine under test
auwgent_mode = { path = ".." }

# HTTP client for Groq API (blocking — no async overhead for a test binary).
# native-tls avoids the aws-lc/cmake build chain that rustls now requires in 0.13.
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "native-tls"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Load GROQ_API_KEY from Auwgentmode/.env
dotenvy = "0.15.7"

# Colored terminal output
colored = "3.1.1"

# CLI argument parsing
clap = { version = "4.6.1", features = ["derive"] }
